--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.0'
 services:
   trust-dns:
-    image: trust-dns:latest
+    image: ghcr.io/azarashi2931/trust-dns:latest
     command: "-c /configs/example.toml -z /configs/ -p 24141"
     ports:
       - 24141:24141/udp
